--- a/res/layout-v21/activity_full_screen_image_viewer.xml
+++ b/res/layout-v21/activity_full_screen_image_viewer.xml
@@ -60,7 +60,7 @@
 		    android:id="@+id/full_image_viewer_get_link"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:src="@drawable/link_ic"
+		    android:src="@drawable/link_ic_white"
 		    android:layout_centerVertical="true"
 		    android:layout_toLeftOf="@id/full_image_viewer_overflow"
 		    android:layout_marginRight="0dp"
@@ -70,7 +70,7 @@
             android:id="@+id/full_image_viewer_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_social_share"
+            android:src="@drawable/ic_social_share_white"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/full_image_viewer_get_link"
             android:layout_marginRight="0dp"
@@ -80,7 +80,7 @@
 		    android:id="@+id/full_image_viewer_properties"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:src="@drawable/info_ic"
+		    android:src="@drawable/info_ic_white"
 		    android:layout_centerVertical="true"
 		    android:layout_toLeftOf="@id/full_image_viewer_share"
 		    android:layout_marginRight="0dp"
@@ -90,7 +90,7 @@
 		    android:id="@+id/full_image_viewer_download"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:src="@drawable/ic_download"
+		    android:src="@drawable/ic_download_white"
 		    android:layout_centerVertical="true"
 		    android:layout_toLeftOf="@id/full_image_viewer_properties"
 		    android:layout_marginRight="0dp"
