--- a/res/layout-v21/contacts_sent_requests_tab.xml
+++ b/res/layout-v21/contacts_sent_requests_tab.xml
@@ -49,7 +49,7 @@
         android:gravity="bottom"
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="100dp"
+        sothree:umanoPanelHeight="120dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" >
 
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/reinvite_ic" />
+                    android:src="@drawable/ic_reinvite" />
 
                 <TextView
                     android:id="@+id/contact_list_option_reinvite_text"
@@ -124,7 +124,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_delete" />
+                    android:src="@drawable/ic_remove" />
 
                 <TextView
                     android:id="@+id/contact_list_option_delete_text"
