--- a/res/layout-v21/contacts_received_requests_tab.xml
+++ b/res/layout-v21/contacts_received_requests_tab.xml
@@ -35,7 +35,7 @@
         android:gravity="bottom"
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="100dp"
+        sothree:umanoPanelHeight="120dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" >
 
@@ -82,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/accept_ic" />
+                    android:src="@drawable/ic_accept" />
 
                 <TextView
                     android:id="@+id/contact_list_option_accept_text"
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ignore_ic" />
+                    android:src="@drawable/ic_ignore" />
 
                 <TextView
                     android:id="@+id/contact_list_option_ignore_text"
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_delete" />
+                    android:src="@drawable/ic_decline" />
 
                 <TextView
                     android:id="@+id/contact_list_option_decline_text"
