--- a/res/layout-v21/fragment_contactsgrid.xml
+++ b/res/layout-v21/fragment_contactsgrid.xml
@@ -52,7 +52,7 @@
         android:gravity="bottom"
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="100dp"
+        sothree:umanoPanelHeight="120dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" >
 
@@ -127,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/send_file_ic" />
+                    android:src="@drawable/ic_send_file" />
 
                 <TextView
                     android:id="@+id/contacts_grid_option_send_file_text"
@@ -183,7 +183,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_delete" />
+                    android:src="@drawable/ic_remove" />
 
                 <TextView
                     android:id="@+id/contacts_grid_option_remove_text"
