--- a/res/layout-v21/fragment_filebrowserlist.xml
+++ b/res/layout-v21/fragment_filebrowserlist.xml
@@ -111,7 +111,7 @@
         android:gravity="bottom"
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="100dp"
+        sothree:umanoPanelHeight="120dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" >
 
@@ -269,7 +269,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/permissions_ic" />
+                    android:src="@drawable/ic_shared_with" />
 
                 <TextView
                     android:id="@+id/file_list_option_permissions_text"
@@ -296,7 +296,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_clear_shares" />
+                    android:src="@drawable/ic_remove_share" />
 
                 <TextView
                     android:id="@+id/file_list_option_clear_share_text"
@@ -350,7 +350,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/leave_share_ic" />
+                    android:src="@drawable/ic_ignore" />
 
                 <TextView
                     android:id="@+id/file_list_option_leave_share_text"
@@ -377,7 +377,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/leave_share_ic" />
+                    android:src="@drawable/ic_send_file" />
 
                 <TextView
                     android:id="@+id/file_list_option_send_inbox_text"
@@ -510,7 +510,7 @@
         android:gravity="bottom"
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="100dp"
+        sothree:umanoPanelHeight="120dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" >
 
@@ -557,7 +557,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_share" />
+                    android:src="@drawable/ic_share"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_title_text"
@@ -585,7 +586,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_download" />
+                    android:src="@drawable/ic_download"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_image_text"
@@ -613,7 +615,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/info_ic" />
+                    android:src="@drawable/info_ic"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_audio_text"
@@ -641,7 +644,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/link_ic" />
+                    android:src="@drawable/link_ic"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_video_text"
@@ -669,7 +673,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_share" />
+                    android:src="@drawable/ic_share"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_from_system_text"
