--- a/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/res/layout-v21/fragment_filebrowsergrid.xml
@@ -558,7 +558,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_share" />
+                    android:src="@drawable/ic_share"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/file_grid_upload_title_text"
@@ -586,7 +587,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_download" />
+                    android:src="@drawable/ic_upload_image" 
+                    android:visibility="visible"/>
 
                 <TextView
                     android:id="@+id/file_grid_upload_image_text"
@@ -614,7 +616,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/info_ic" />
+                    android:src="@drawable/ic_upload_audio"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/file_grid_upload_audio_text"
@@ -642,7 +645,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/link_ic" />
+                    android:src="@drawable/ic_upload_video" 
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/file_grid_upload_video_text"
@@ -670,7 +674,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_share" />
+                    android:src="@drawable/ic_upload_pick_file"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/file_grid_upload_from_system_text"
