--- a/res/layout-v21/fragment_filebrowserlist.xml
+++ b/res/layout-v21/fragment_filebrowserlist.xml
@@ -586,8 +586,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_download"
-                    android:visibility="invisible" />
+                    android:src="@drawable/ic_upload_image"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_image_text"
@@ -615,8 +615,8 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/info_ic"
-                    android:visibility="invisible" />
+                    android:src="@drawable/ic_upload_audio"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/file_list_upload_audio_text"
@@ -644,7 +644,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/link_ic"
+                    android:src="@drawable/ic_upload_video"
                     android:visibility="invisible" />
 
                 <TextView
@@ -673,7 +673,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_share"
+                    android:src="@drawable/ic_upload_pick_file"
                     android:visibility="invisible" />
 
                 <TextView
