Bug #3912 - Three dots option is not clickable easily (sometimes it performs a click on the row) (reported by @stephenh )

--- a/res/layout-v21/item_contact_grid.xml
+++ b/res/layout-v21/item_contact_grid.xml
@@ -59,9 +59,9 @@
 	        android:src="@drawable/ic_dots_vertical_grey"
 	        android:layout_below="@id/contact_grid_separator"
 			android:background="@null" 
-	        android:layout_marginLeft="2dp"
-	        android:layout_marginRight="8dp"
-	        android:layout_marginTop="22dp"
+	        android:paddingLeft="2dp"
+	        android:paddingRight="8dp"
+	        android:paddingTop="22dp"
 	        android:layout_alignParentRight="true"/>
         
         <TextView
