--- a/res/layout-v21/item_contact_incom_request_list.xml
+++ b/res/layout-v21/item_contact_incom_request_list.xml
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_dots_vertical_grey"
 		android:background="@null" 
+		android:paddingLeft="10dp"
 		android:layout_centerVertical="true"
         android:layout_alignParentRight="true"/>
     
