--- a/res/layout-v21/item_file_grid.xml
+++ b/res/layout-v21/item_file_grid.xml
@@ -59,9 +59,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/file_grid_separator"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="22dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="8dp"
+        android:paddingTop="22dp"
         android:background="@null"
         android:src="@drawable/ic_dots_vertical_grey" />
 
