--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -102,7 +102,8 @@
 	
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">@color/accentColor</item>
-        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorPrimary">@color/text_secondary</item>
         <item name="android:background">@color/white</item>
         <item name="colorControlNormal">@color/text_secondary</item>
     </style>
