--- a/res/layout-v21/contacts_sent_requests_tab.xml
+++ b/res/layout-v21/contacts_sent_requests_tab.xml
@@ -6,20 +6,24 @@
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/empty_text_contacts_requests"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:textColor="@color/text_secondary"
-        android:textSize="16sp" />
-
     <ImageView
         android:id="@+id/empty_image_contacts_requests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:gravity="center_horizontal" />
+
+    <TextView
+        android:id="@+id/empty_text_contacts_requests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/empty_image_contacts_requests"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:textColor="@color/text_secondary"
+        android:textSize="16sp" />
+   
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/incoming_contacts_list_view"
