--- a/res/layout-v21/item_shared_folder.xml
+++ b/res/layout-v21/item_shared_folder.xml
@@ -33,22 +33,27 @@
     
     <TextView
         android:id="@+id/shared_folder_contact_name"
-        android:layout_width="wrap_content"
+        android:layout_width="225dp"
         android:layout_height="30dp"
         android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
-        android:paddingLeft="5dp"
+        android:paddingLeft="3dp"
         android:paddingTop="7dp"
-         android:textStyle="bold" />
+        android:textColor="@color/file_list_first_row"
+        android:ellipsize="end"
+        android:maxLines="2"/>    
     
     <TextView
         android:id="@+id/shared_folder_contact_permissions"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
-        android:layout_below="@id/shared_folder_contact_name"
-        android:textColor="@color/file_list_second_row"
-        android:paddingLeft="5dp"
-        android:paddingBottom="7dp"/>
+        android:layout_below="@+id/shared_folder_contact_name"
+        android:paddingLeft="3dp"
+        android:paddingBottom="7dp"
+        android:textColor="@color/file_list_second_row" 
+        android:textSize="12sp"
+        android:ellipsize="end"
+        android:maxLines="1"/>
     
     <ImageButton 
         android:id="@+id/shared_folder_contact_three_dots"
@@ -56,8 +61,9 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_dots_vertical_grey"
 		android:background="@null" 
+		android:paddingLeft="10dp"
         android:layout_alignParentRight="true"
-		android:layout_centerVertical="true"/>
+		android:layout_centerVertical="true" />
 
 </RelativeLayout>
 
