--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="settings_storage_download_location_values">
+        <item>1001</item>
+        <item>1002</item>
+    </string-array>
+    
 	<string-array name="settings_camera_upload_how_to_values">
 		<item>1001</item>
 		<item>1002</item>
