--- a/res/layout-v21/activity_contactsexplorer.xml
+++ b/res/layout-v21/activity_contactsexplorer.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/fragment_background"
     android:orientation="vertical"
     tools:context=".ContactsExplorerActivityLollipop" >
     
@@ -15,6 +16,27 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         tools:context=".ContactsExplorerActivityLollipop" />
+    
+    <ImageView
+        android:id="@+id/contact_explorer_list_empty_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/ic_empty_contacts"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/toolbar_contacts_explorer" />
+
+    <TextView
+        android:id="@+id/contact_explorer_list_empty_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/contact_explorer_list_empty_image"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:text="@string/contacts_explorer_list_empty_text"
+        android:textColor="@color/text_secondary"
+        android:textSize="16sp" />
   
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_explorer_list_view"
